--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <img class="chevron_img" src="./assets/general/ChevronDown.webp" alt="chevron-down">
                     </li>
                 </ul>
-                <span class="navbar-text text-white">
+                <span class="navbar-text">
                     <img src="./assets/general/PhoneCall.webp" alt="Phone Call Icon">
                     (219) 555-0114
                 </span>
@@ -1868,7 +1868,7 @@
 
 
 
-
+    <script src="./assets/js/style.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
